<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/Image_UR_x"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/nasa_image"
        android:contentDescription="@string/apod_image_content_description"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintBottom_toTopOf="@+id/title_x"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/title_x"
        android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/label_title"
    android:textAppearance="?attr/textAppearanceHeadline6"
    android:textStyle="bold"
    app:layout_constraintVertical_chainStyle="packed"
    app:layout_constraintVertical_bias="0.05"

    app:layout_constraintTop_toBottomOf="@+id/Image_UR_x"
    app:layout_constraintBottom_toTopOf="@+id/explanation_x"

    app:layout_constraintStart_toStartOf="parent"
    />


    <TextView
        android:id="@+id/explanation_x"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label_explanation"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintTop_toBottomOf="@+id/title_x"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintBottom_toTopOf="@+id/date_x"/>

    <TextView
        android:id="@+id/date_x"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label_date"
        android:textAppearance="?attr/textAppearanceCaption"
        app:layout_constraintTop_toBottomOf="@+id/explanation_x"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/copyright_x"/>

    <TextView
        android:id="@+id/copyright_x"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label_copyright"
        android:textAppearance="?attr/textAppearanceCaption"
        android:visibility="visible"
    tools:visibility="visible"
    app:layout_constraintTop_toBottomOf="@+id/date_x"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@+id/button_x"/>


    <Button
        android:id="@+id/button_x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#6200EE"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/str_button"
        android:textColor="@color/white"
        app:cornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@+id/copyright_x"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>
